2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/mb/hd-desktop.c:
	* src/mb/hd-desktop.h: Remove update of theme update related code,
	which sets GConf keys for backgrounds. This is handled in hildon-home
	now.

2009-05-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#114411 Sometimes incoming call dialog not shown while device
		  in potrait mode but can hear the sound. also status menu
		  shown empty when this happens

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Another 1-line-change-15-lines-comment fix.  Don't play the
	  unblurring transition when we try to go to home view from switcher
	  view because a maximized dialog, because set_visibilities()
	  refuses to show these kind of actors as long as the switcher
	  is visible in the background.

2009-05-04  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: NB#113689 - Mouse not working in the fullscreen application in
	the upper left corner.

	* src/mb/hd-render-manager.c: Hiding the task navigator button with the
	  blur_front group.

2009-05-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#112824 Task button and status area disappears in a mentioned scenario.

	* src/home/hd-switcher.c (hd_switcher_relaunch_app_callback):
	  Be prepared for interrupted launcher->switcher blurring transition.

2009-05-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.46

	* src/home/hd-home.c (hd_home_add_applet): Do not free 'view_key'
	twice, it makes HD abort. 

2009-05-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#111183 Random desktop crash observed from task switcher.

	* src/home/hd-switcher.c (hd_switcher_zoom_in_complete):
	  Handle it gracefully if the zoomed in client has been unmanaged.

2009-05-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.45

2009-05-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fix issue where app(with dialog)->switcher->app->switcher->original
	app would remove blur behind the dialog.

	* src/home/hd-render-manager.c