@@ -23,9 +23,9 @@ zoom = 0.9
 
 # The glow effect around launcher buttons
 [launcher_glow]
-duration_in = 150
-duration_out = 250
-radius = 12
+duration_in = 100
+duration_out = 200
+radius = 10
 brightness = 0.75
 
 # Launcher top layer first appearing
@@ -85,8 +85,8 @@ duration_out = 250
 
 # Fade in for banners
 [fade]
-duration_in = 150
-duration_out = 150
+duration_in = 200
+duration_out = 500
 
 # Transition for notification previews
 [notification]
